# Diagnostic-for-Budget-Constrained-Multi-Hop-RAG

./: .gitignore  CLOUD_RUN.md  METHODS.md  MUSIQUE_STAGE_DESIGN.md  PAPER_EXPLAINER.md  PROJECT_BRIEF.md  README.md  RESEARCH_LOG.md  RESULTS.md  THESIS_RESULTS_SUMMARY.md  pyproject.toml  requirements-cloud.txt  requirements.txt
ace_rag/: __init__.py  compression.py  context_quality.py  datasets.py  embeddings.py  evidence_packer.py  generator.py  graph_builder.py  metrics.py  retriever.py  schema.py  text.py  verifier.py
analysis_results/covidqa_bootstrap_focused_vs_chunk/: bootstrap_summary.csv
analysis_results/covidqa_bootstrap_packed_vs_chunk/: bootstrap_summary.csv
analysis_results/covidqa_errors_focused_vs_chunk/: policy_comparison_examples.csv  policy_comparison_examples.md  policy_comparison_summary.csv
analysis_results/emanual_bootstrap_focused_vs_chunk/: bootstrap_summary.csv
configs/: hotpotqa.yaml  musique_local.yaml  ragbench.yaml  toy.yaml
experiments/: analyze_router_transfer.py  run_ablation.py  run_density_router.py  run_mvp.py  run_qwen_eval.py  run_stage2_autonomous.py  run_stage3_router.py
figures/: make_figures.py  make_hero.py
notebooks/: ACE_RAG_Cloud_Quickstart.ipynb  ACE_RAG_Kaggle_Runbook.ipynb  ACE_RAG_Stage2_Autonomous.ipynb
scripts/: analyze_density_results.py  analyze_pubmedqa_labels.py  analyze_stage3_errors.py  bootstrap_stage3_significance.py  cloud_check.py  decompose_packer_winloss.py  incremental_validity_aic.py  pool_multiseed_bootstrap.py  prepare_datasets.py  summarize_stage3_results.py
(+31 files in other folders)
