[project]
name = "ace-rag-research"
version = "0.1.0"
description = "Experimental scaffold for Adaptive Compressed Evidence Graph RAG."
requires-python = ">=3.10"
dependencies = [
  "datasets>=2.20.0",
  "sentence-transformers>=3.0.0",
  "faiss-cpu>=1.8.0",
  "numpy>=1.26.0",
  "scikit-learn>=1.4.0",
  "rank-bm25>=0.2.2",
  "pyyaml>=6.0.0",
  "tqdm>=4.66.0",
  "openai>=1.40.0",
]

[tool.ruff]
line-length = 120

